# chkobba-rust

./: .gitignore  Cargo.toml  chkobba_stats.json  readme.md
.github/workflows/: build.yml
src/: audio.rs  card.rs  cpu.rs  main.rs  stats.rs
