[package]
name = "chkobba"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
crossterm = "0.29.0"
itertools = "0.15.0"
rand = "0.10.1"
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strum = { version = "0.28.0", features = ["derive"] }
